--- a/cpp_lib/CMakeLists.txt
+++ b/cpp_lib/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_library("cpp_lib")
+set_target_properties("cpp_lib" PROPERTIES VERSION ${PROJECT_VERSION})
+set_target_properties("cpp_lib" PROPERTIES PUBLIC_HEADER "include/cpp_lib.hpp")
 
 target_sources("cpp_lib"
     PUBLIC
@@ -14,5 +16,10 @@ target_include_directories("cpp_lib"
 
 target_link_libraries("cpp_lib"
     "GSL")
+
+include(GNUInstallDirs)
+install(TARGETS "cpp_lib"
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 add_subdirectory(test)
