--- a/pybind_binding/CMakeLists.txt
+++ b/pybind_binding/CMakeLists.txt
@@ -3,4 +3,8 @@ pybind11_add_module("_core" "src/core_pybind.cpp")
 target_link_libraries("_core" PUBLIC "cpp_lib")
 
 target_compile_definitions("_core" PRIVATE VERSION_INFO=${PROJECT_VERSION})
-install(TARGETS "_core" DESTINATION .)
+
+include(GNUInstallDirs)
+install(TARGETS "_core"
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
